--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B008FBC2-8AFB-48FF-BA85-97845DDF02D2}</ProjectGuid>
+    <ProjectGuid>{3615F16A-B37F-40B4-B58D-CC39FA8F6646}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Chalkable.BusinessLogic</RootNamespace>
-    <AssemblyName>Chalkable.BusinessLogic</AssemblyName>
+    <RootNamespace>Chalkable.Common</RootNamespace>
+    <AssemblyName>Chalkable.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,26 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\CoreRole.cs" />
-    <Compile Include="Services\Master\MasterServiceBase.cs" />
-    <Compile Include="Services\Master\ServiceLocatorMaster.cs" />
-    <Compile Include="Services\Master\UserService.cs" />
-    <Compile Include="Services\UserContext.cs" />
-    <Compile Include="Services\ServiceLocator.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Chalkable.Common\Chalkable.Common.csproj">
-      <Project>{3615F16A-B37F-40B4-B58D-CC39FA8F6646}</Project>
-      <Name>Chalkable.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Chalkable.Data.Common\Chalkable.Data.Common.csproj">
-      <Project>{CEB50B03-B84B-4194-9BEE-F1A2EBD17686}</Project>
-      <Name>Chalkable.Data.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Chalkable.Data.Master\Chalkable.Data.Master.csproj">
-      <Project>{C9ACB7A6-1755-424A-B0BB-3B0C5B13EC15}</Project>
-      <Name>Chalkable.Data.Master</Name>
-    </ProjectReference>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
