--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -12,8 +12,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableMaster;UID=sa;Pwd=mc_z631"/>-->
-    <add name="ChalkableMaster" connectionString="Server=tcp:qvi4pmue7v.database.windows.net,1433;Database=ChalkableMaster;User ID=chalkableadmin@qvi4pmue7v;Password=Hellowebapps1!;Trusted_Connection=False;Encrypt=True;"/>
+    <add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableMaster;UID=sa;Pwd=mc_z631"/>
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=Hellowebapps1!"/>
+    
+    
+    <!--<add name="ChalkableMaster" connectionString="Server=tcp:qvi4pmue7v.database.windows.net,1433;Database=ChalkableMaster;User ID=chalkableadmin@qvi4pmue7v;Password=Hellowebapps1!;Trusted_Connection=False;Encrypt=True;"/>-->
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
