--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -39,7 +39,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Announcement.cs" />
+    <Compile Include="Model\Class.cs" />
+    <Compile Include="Model\CourseInfo.cs" />
+    <Compile Include="Model\GradeLevel.cs" />
+    <Compile Include="Model\MarkingPeriod.cs" />
+    <Compile Include="Model\Person.cs" />
+    <Compile Include="Model\SchoolYear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Chalkable.Data.Common\Chalkable.Data.Common.csproj">
+      <Project>{ceb50b03-b84b-4194-9bee-f1a2ebd17686}</Project>
+      <Name>Chalkable.Data.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
