--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -41,13 +41,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChlkResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ChlkResources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Constants.cs" />
+    <Compile Include="Exceptions\BlobNotFoundException.cs" />
+    <Compile Include="Exceptions\ChalkableException.cs" />
+    <Compile Include="Exceptions\ChalkableSecurityException.cs" />
+    <Compile Include="Exceptions\IncorrectTaskDataException.cs" />
+    <Compile Include="Exceptions\InvalidSchoolStatusException.cs" />
+    <Compile Include="Exceptions\NoMarkingPeriodException.cs" />
+    <Compile Include="Exceptions\UnassignedUserException.cs" />
+    <Compile Include="Exceptions\UnknownRoleExceptioin.cs" />
+    <Compile Include="Exceptions\UnknownRoleException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="StringTools.cs" />
     <Compile Include="Web\JavaScriptString.cs" />
     <Compile Include="Web\MagicJSONSerializer.cs" />
     <Compile Include="Web\SensitiveData.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="ChlkResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ChlkResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
