--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -11,6 +11,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <configSections>
+    <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration" />
+  </configSections>
   <connectionStrings>
     <add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableMaster;UID=sa;Pwd=mc_z631"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=Hellowebapps1!"/>
@@ -45,4 +48,12 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+
+  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate">
+    <Servers>
+      <add key="DbServer1" value=".\sqlexpress" />
+      <add key="DbServer2" value=".\sqlexpress" />
+    </Servers>
+  </ChalkableConfiguration>
+  
 </configuration>
