--- a/Chalkable.Tests/app.config
+++ b/Chalkable.Tests/app.config
@@ -1,6 +1,20 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration,Chalkable.Common" />
+  </configSections>
   <connectionStrings>
     <add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableTestDb;UID=sa;Pwd=mc_z631"/>
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=Hellowebapps1!"/>
   </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+  </startup>
+
+  <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate">
+    <Servers>
+      <add key="DbServer1" value=".\sqlexpress" />
+      <add key="DbServer2" value=".\sqlexpress" />
+    </Servers>
+  </ChalkableConfiguration>
+</configuration>
