--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -66,7 +66,7 @@
   <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="ChlkResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ChlkResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
