Rearranged SQL. added school creation.

--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -49,7 +49,9 @@
     <Compile Include="DataAccess\OrmTest.cs" />
     <Compile Include="OnDataBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
+    <Compile Include="Services\ServiceTestBase.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestBase.Pathes.cs" />
   </ItemGroup>
