added finalgrade, studentAnnouncement tables added get, Delete, Create Announcements  procedures added reorderingAnnouncement, applyStarring procedures added Create, Edit, Delete, GetAnnouncements methods to AnnouncementServices
rewrited Orm class ... added new update method

moved CoreRoles to Chalkable.Common

--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -47,6 +47,7 @@
       <DependentUpon>ChlkResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Constants.cs" />
+    <Compile Include="CoreRole.cs" />
     <Compile Include="DateTimeTools.cs" />
     <Compile Include="Exceptions\BlobNotFoundException.cs" />
     <Compile Include="Exceptions\ChalkableException.cs" />
