--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -53,6 +53,9 @@
     <Compile Include="DataAccess\MarkingPeriodClassDataAccess.cs" />
     <Compile Include="DataAccess\MarkingPeriodDataAccess.cs" />
     <Compile Include="DataAccess\PersonDataAccess.cs" />
+    <Compile Include="DataAccess\PhoneDataAccess.cs" />
+    <Compile Include="DataAccess\PrivateMessageDataAccess.cs" />
+    <Compile Include="DataAccess\RoomDataAccess.cs" />
     <Compile Include="DataAccess\SchoolYearDataAccess.cs" />
     <Compile Include="DataAccess\StudentAnnouncementDataAccess.cs" />
     <Compile Include="Model\Address.cs" />
@@ -65,13 +68,20 @@
     <Compile Include="Model\AnnouncementReminder.cs" />
     <Compile Include="Model\AnnouncementType.cs" />
     <Compile Include="Model\Class.cs" />
+    <Compile Include="Model\ClassPeriod.cs" />
     <Compile Include="Model\ClassPerson.cs" />
     <Compile Include="Model\CourseInfo.cs" />
+    <Compile Include="Model\Date.cs" />
     <Compile Include="Model\FinalGrade.cs" />
     <Compile Include="Model\GradeLevel.cs" />
     <Compile Include="Model\MarkingPeriod.cs" />
     <Compile Include="Model\MarkingPeriodClass.cs" />
+    <Compile Include="Model\Period.cs" />
     <Compile Include="Model\Person.cs" />
+    <Compile Include="Model\Phone.cs" />
+    <Compile Include="Model\PrivateMessage.cs" />
+    <Compile Include="Model\RoomInfo.cs" />
+    <Compile Include="Model\ScheduleSection.cs" />
     <Compile Include="Model\SchoolYear.cs" />
     <Compile Include="Model\StudentAnnouncement.cs" />
     <Compile Include="Model\StudentInfo.cs" />
