added basic ria fixes

--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  
+  <configSections>
+    <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -11,12 +15,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <configSections>
-    <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration" />
-  </configSections>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=.\sqlexpress;Initial Catalog=ChalkableMaster;UID=sa;Pwd=mc_z631"/>
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableMaster" connectionString="Data Source=.;Initial Catalog=ChalkableMaster;UID=sa;Pwd=qwerty"/>
+    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=sa;Pwd=qwerty"/>
     
     
     <!--<add name="ChalkableMaster" connectionString="Server=tcp:qvi4pmue7v.database.windows.net,1433;Database=ChalkableMaster;User ID=chalkableadmin@qvi4pmue7v;Password=Hellowebapps1!;Trusted_Connection=False;Encrypt=True;"/>-->
@@ -51,8 +52,8 @@
 
   <ChalkableConfiguration SchoolTemplateDataBase="ChalkableSchoolTemplate">
     <Servers>
-      <add key="DbServer1" value=".\sqlexpress" />
-      <add key="DbServer2" value=".\sqlexpress" />
+      <add key="DbServer1" value="." />
+      <add key="DbServer2" value="." />
     </Servers>
   </ChalkableConfiguration>
   
