--- a/Chalkable.Data.School/Chalkable.Data.School.csproj
+++ b/Chalkable.Data.School/Chalkable.Data.School.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Model\GradeLevel.cs" />
     <Compile Include="Model\MarkingPeriod.cs" />
     <Compile Include="Model\MarkingPeriodClass.cs" />
+    <Compile Include="Model\Notification.cs" />
     <Compile Include="Model\Period.cs" />
     <Compile Include="Model\Person.cs" />
     <Compile Include="Model\Phone.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Model\ScheduleSection.cs" />
     <Compile Include="Model\SchoolYear.cs" />
     <Compile Include="Model\StudentAnnouncement.cs" />
+    <Compile Include="Model\StudentDailyAttendance.cs" />
     <Compile Include="Model\StudentFinalGrade.cs" />
     <Compile Include="Model\StudentInfo.cs" />
     <Compile Include="Model\StudentParent.cs" />
