--- a/Chalkable.Common/Chalkable.Common.csproj
+++ b/Chalkable.Common/Chalkable.Common.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="StringTools.cs" />
+    <Compile Include="UrlTools.cs" />
     <Compile Include="Web\JavaScriptString.cs" />
     <Compile Include="Web\MagicJSONSerializer.cs" />
     <Compile Include="Web\SensitiveData.cs" />
