--- a/Chalkable.Data.Common/Chalkable.Data.Common.csproj
+++ b/Chalkable.Data.Common/Chalkable.Data.Common.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="DataAccessBase.cs" />
     <Compile Include="DataEntittyAttr.cs" />
+    <Compile Include="Enums\ImportSystemType.cs" />
     <Compile Include="Orm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlTools.cs" />
