added timeZone to school renaming scripts fixed in Orm

--- a/Chalkable.Tests/app.config
+++ b/Chalkable.Tests/app.config
@@ -4,8 +4,8 @@
     <section name="ChalkableConfiguration" type="Chalkable.Common.ApplicationConfiguration,Chalkable.Common" />
   </configSections>
   <connectionStrings>
-    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMasterTest;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
+    <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplateTest;UID=chalkableadmin;Pwd=Hellowebapps1!"/>
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!"/>
   </connectionStrings>
   <startup>
