--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\Chalkable.BackgroundTaskProcessor\packages.config" />
   <repository path="..\Chalkable.BackgroundTaskProducer\packages.config" />
   <repository path="..\Chalkable.Data.Common\packages.config" />
+  <repository path="..\Chalkable.StiConnector\packages.config" />
   <repository path="..\Chalkable.Web\packages.config" />
 </repositories>
