--- a/Chalkable.Data.Master/Chalkable.Data.Master.csproj
+++ b/Chalkable.Data.Master/Chalkable.Data.Master.csproj
@@ -47,8 +47,11 @@
     <Compile Include="DataAccess\SchoolUserDataAccess.cs" />
     <Compile Include="DataAccess\UserDataAccess.cs" />
     <Compile Include="Model\BackgroundTask.cs" />
+    <Compile Include="Model\ChalkableDepartment.cs" />
+    <Compile Include="Model\District.cs" />
     <Compile Include="Model\ImportSystemType.cs" />
     <Compile Include="Model\Preference.cs" />
+    <Compile Include="Model\SisSync.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
