--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -50,8 +50,14 @@
     <Compile Include="OnDataBaseTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Master\BackgrounTaskServiceTest.cs" />
+    <Compile Include="Services\Master\MasterServiceTestBase.cs" />
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
+    <Compile Include="Services\School\BaseSchoolServiceTest.Assert.cs" />
+    <Compile Include="Services\School\BaseSchoolServiceTest.cs" />
+    <Compile Include="Services\School\MarkingPeriodServiceTest.cs" />
+    <Compile Include="Services\School\SchoolTestContext.cs" />
+    <Compile Include="Services\School\SchoolYearServiceTest.cs" />
     <Compile Include="Services\ServiceTestBase.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestBase.Pathes.cs" />
@@ -80,6 +86,9 @@
       <Project>{C5753C2A-F2BC-4F96-846B-548FC67191B2}</Project>
       <Name>Chalkable.Data.School</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataAccess\School\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
