--- a/Chalkable.Data.Common/Chalkable.Data.Common.csproj
+++ b/Chalkable.Data.Common/Chalkable.Data.Common.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Orm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlTools.cs" />
+    <Compile Include="Storage\BaseStorageHelper.cs" />
+    <Compile Include="Storage\BlobHelper.cs" />
     <Compile Include="Storage\TableHelper.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
