added attendance service fixed in calendarService fixed in dataAccess start attendanceTest

--- a/Chalkable.Tests/Chalkable.Tests.csproj
+++ b/Chalkable.Tests/Chalkable.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Services\Master\SchoolServiceTest.cs" />
     <Compile Include="Services\Master\UserServiceTest.cs" />
     <Compile Include="Services\School\AttendanceReasonServiceTest.cs" />
+    <Compile Include="Services\School\AttendanceServiceTest.cs" />
     <Compile Include="Services\School\BaseSchoolServiceTest.Assert.cs" />
     <Compile Include="Services\School\BaseSchoolServiceTest.cs" />
     <Compile Include="Services\School\MarkingPeriodServiceTest.cs" />
