--- a/Chalkable.Web/Web.config
+++ b/Chalkable.Web/Web.config
@@ -14,16 +14,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  
   <connectionStrings>
     
-    <add name="ChalkableMaster" connectionString="Data Source=qvi4pmue7v.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=qvi4pmue7v.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
+    <add name="ChalkableSchoolTemplate" connectionString="Data wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
     <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!" />
 
-    <!--<add name="ChalkableMaster" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableMaster;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchoolTemplate" connectionString="Data Source=wcc87p1bed.database.windows.net;Initial Catalog=ChalkableSchoolTemplate;UID=chalkableadmin;Pwd=Hellowebapps1!" />
-    <add name="ChalkableSchool" connectionString="Data Source={0};Initial Catalog={1};UID=chalkableadmin;Pwd=Hellowebapps1!" />-->
   </connectionStrings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -41,6 +37,7 @@
     </pages>
     <membership defaultProvider="ChalkableMembershipProvider" userIsOnlineTimeWindow="15">
     </membership>
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
